# LivingTreeAlAgent

./: .coverage  .gitattributes  .gitignore  .tmp_agent_chat_db  .tmp_chat_test_db  AGENTS.md  AI_OS_ENHANCEMENT_REPORT.md  AI_OS_MODULE_MATCHING_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_BIOLOGICAL.md  ARCHITECTURE_V2.md  ARCHITECTURE_VISUALIZATION.md  CLI_MANUAL.md  CONTEXT.md  CONVENTIONS.md  DEPENDENCIES.mmd  DESIGN.md  Dockerfile  FEATURE_ENHANCEMENT_REPORT.md  LIFE_SYSTEM_ARCHITECTURE.md  LIFE_SYSTEM_INTEGRATION.md  LIVINGTREE_API_DOCS.md  LLM_Wiki_集成分析报告.md  LONG_CONTEXT_MATCHING_REPORT.md  OPIK_INTEGRATION_GUIDE.md  OpenCode_集成分析报告.md  PROGRAMMING_OS_ROADMAP.md  PYQT6_IDE_MATCHING_REPORT.md  README.md  REFACTORING_TECHNICAL_PLAN.md  REFLECTIVE_AGENT_ANALYSIS.md  REORGANIZATION_PLAN.md  SELF_EVOLUTION_MATCHING_REPORT.md  SYSTEM_ANALYSIS_REPORT.md  SYSTEM_ARCHITECTURE.md  TASKS.md  TODO.md  Week1_Implementation_Report.md  _baidu_response.html  _search_result_final.txt  (+422 more)
.evolution_db/: evaluation_history.json
.open-mem/: memory.db-shm  memory.db-wal
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.tool_logs/: 20260424.jsonl
.workbuddy/: MIGRATION_TRACKING.md  P1_CONFIG_MIGRATION_FULL_LIST.md  insert_env_awareness.py
.wt/: NOTICE.html
app/: __init__.py  main.py  requirements-app.txt
client/: __init__.py  requirements-client.txt
config/: config.merge.yaml  config.yaml  email_config.json  livingtree.yaml  ollama_models.yaml  security_policy.json  unified.yaml  user_config.json
core/: __init__.py  agent.py  agent_chat.py  agent_chat_enhancer.py  agent_hub.py  agent_pipeline_adapter.py  agent_progress.py  agent_worker.py  ai_capability_detector.py  ai_content_enhancer.py  ai_intent_engine.py  ai_network_optimizer.py  ai_reasoning_engine.py  api_gateway.py  app_proxy_config.py  archive_tool.py  auth_system.py  cli_anything.py  cli_tool_installer.py  cognee_memory.py  config.py  config_hot_reloader.py  config_missing_detector.py  config_provider.py  config_sync.py  context_preprocessor.py  decision_engine.py  deep_search_proxy_integration.py  deployment_engine.py  deployment_monitor.py  discourse_rag.py  download_manager.py  enhanced_search.py  enterprise_integration.py  error_logger.py  ffmpeg_tool.py  full_guidance_integration.py  git_proxy_config.py  github_project_manager.py  hermes_ai_client.py  (+57 more)
data/: test_page_index.md
database/: __init__.py  migrations.py
desktop/: README.md
docs/: A2A_PROTOCOL_IMPLEMENTATION.md  AGENT_TRAINER_ARCHITECTURE.md  ANYDOC_UNIVERSAL_ENGINE_MATCHING.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_20260419.md  ARCHITECTURE_REVAMP_2026.md  ARCHITECTURE_REVAMP_V2_20260502.md  ARCHITECTURE_UPGRADE_20260501.md  BOOKRAG_ARCHITECTURE.md  BUILTIN_LLM_MATCHING_ANALYSIS.md  BUILTIN_PLATFORM_PANEL_DESIGN.md  CONFIG_MIGRATION_GUIDE.md  DEVELOPMENT.md  EIA_PROFESSIONAL_MAP_ENGINE_DESIGN.md  EIA_REPORT_SYSTEM_MATCHING_ANALYSIS.md  ENHANCED_MEMORY_GUIDE.md  ENTERPRISE_STORAGE_GUIDE.md  EVOLUTION_ENGINE_ARCHITECTURE.md  EXECUTION_AGENT_DESIGN.md  EXPERT_SYSTEM_FACTORY_INTEGRATION.md  GAME_PANEL_DESIGN.md  IDE_CONCRETE_IMPLEMENTATION_PLAN.md  IDE_UPGRADE_TO_BUSINESS_OS.md  INDUSTRY_AGENT_INTEGRATION_ANALYSIS.md  INFORMATION_HUNTER_INTEGRATION.md  L0_L4_INTEGRATION_PLAN.md  LIVINGTREE_ARCHITECTURE_GUIDE.md  LIVINGTREE_DEVELOPMENT_GUIDE.md  OPTIMAL_CONFIG_ROADMAP.md  PHASE1_MILESTONE_REPORT.md  PHASE2_DESIGN.md  PHASE6_ROADMAP.md  PROGRESSIVE_UI_MATCHING_ANALYSIS.md  PROJECT_MATCHER_ARCHITECTURE.md  SYSTEM_POTENTIAL_FEATURES_AND_ARCHITECTURE_REFINEMENT_REPORT.md  TOOL_DEVELOPMENT_GUIDE.md  UI_ARCHITECTURE.md  UI_TEST_FIX_SYSTEM_DESIGN.md  USER_GUIDE.md  (+29 more)
examples/: demo_decision_panel.py  demo_fusion_rag.py  demo_memory_decision.py  demo_recommendation.py  demo_relay.py  demo_task_queue.py  demo_tier_model.py  demo_writing_assistant.py  learning_world_demo.py  new_features_demo.py  office_integration.py  relay_client.js
expert_system/: __init__.py  expert_panel.py  persona_dispatcher.py  repository.py  smart_expert.py  user_profile.py
frp/: frpc.toml  frps.toml
learning_world/: __init__.py
libs/: README.md  sync_opencode.py
livingtree/: __init__.py  __main__.py  desktop_shell.py  main.py  main_diag.py  main_web.py
livingtree_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
livingtree_ng/: PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  download_libs.py  main.py  requirements.txt
localresources/: AI大模型使用必读.txt  AI测试试题====从第二行向上复制，右键模型窗口自动开跑.txt  opencode+omo.txt  新建 DOCX 文档.docx
mobile/: adaptive_layout.py  foldable_support.py  main.py  pwa_integration.py  screens.py  tablet_features.py  test_mobile.py
protos/: livingtree.proto
relay_server/: main.py  web_dashboard.py
scripts/: apply_tts_patch.py  apply_tts_v4.py  auto_heal.py  auto_update.py  batch_migrate_prints.py  check.py  config_wizard.py  do_patch.py  download_wt.py  fix2.py  fix_indent_v3.py  fix_tts_indent.py  install_all_lsp.ps1  install_cpp_lsp.ps1  install_csharp_lsp.ps1  install_go_lsp.ps1  install_java_lsp.ps1  install_oh_my_opencode.sh  install_shortcut.py  migrate_print_to_logging.py  model_manager.py  patch_arch_doc.py  patch_ide_spell.py  patch_spell_check.py  patch_tts.py  print_to_logging.py  rebuild_indent.py  run_client.sh  wt_setup.py
server/: __init__.py
styles/: theme.tcss
test_business_os/: test_business_parser.py
test_cloud/: .gitignore  README.md  deploy.sh  enhance_ide.py  enhance_knowledge_base.py  main.py  pyproject.toml  requirements.txt  run_hermes.bat  setup_remote_api.py
test_results/: report_20260430_175230.txt  report_20260430_175257.txt  report_20260430_181949.txt
tests/: conftest.py  quick_test_hermes.py  self_test.py  test_a2a_protocol.py  test_agent_framework.py  test_agent_native_and_memory.py  test_agent_orchestrator.py  test_agent_reach_tool.py  test_anomaly_and_disclosure.py  test_anti_rationalization.py  test_api_key_and_load_balancing.py  test_auto_integration.py  test_basic.py  test_bookrag.py  test_capability_smoke.py  test_caveman_tool.py  test_chaos.py  (+89 more)
(+5840 files in other folders)
