[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livingtree-ai-agent"
version = "2.0.0"
description = "LivingTree AI Agent - 智能代理开发平台"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "jinja2>=3.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
desktop = ["PyQt6>=6.5.0"]
ai = ["cognee>=1.0.0", "langextract>=1.3.0"]
docs = ["mineru[core]>=3.0.0"]
test = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "lxml>=4.9"]

[tool.setuptools.packages.find]
include = ["livingtree*", "client*", "server*", "app*"]

[project.scripts]
livingtree = "livingtree.main:main"

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".git", ".venv", "__pycache__", "*.pyc",
    "client/src/*", "node_modules/*",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes + pycodestyle
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "B",                 # flake8-bugbear
    "SIM",               # flake8-simplify
    "C4",                # flake8-comprehensions
]
ignore = [
    "E501",              # line-too-long (handled by formatter)
    "B008",              # do-not-perform-function-calls-in-argument-defaults
]

[tool.ruff.lint.isort]
known-first-party = ["livingtree"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
