[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livingtree-ai-agent"
version = "2.4.0"
description = "LivingTree AI Agent - 数字生命体AI平台 (12-organ biological architecture)"
requires-python = ">=3.13"
dependencies = [
    # ── Core Web & API ──
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # ── Config & Data ──
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    # ── Logging & Templates ──
    "loguru>=0.7.0",
    "jinja2>=3.0",
    # ── Rate Limiting ──
    "slowapi>=0.1.9",
    # ── Security ──
    "cryptography>=41.0.0",
    # ── Numeric & Scientific ──
    "numpy>=1.24.0",
    # ── System Monitoring ──
    "psutil>=5.9.0",
    # ── Image Processing ──
    "Pillow>=10.0.0",
    # ── Database ──
    "aiosqlite>=0.19.0",
    # ── Serialization ──
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
# ── Desktop GUI ──
desktop = ["PyQt6>=6.5.0", "pyperclip>=1.8", "webview>=0.4"]

# ── Document Processing ──
docs = [
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "pypdf>=3.0.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.9.0",
    "xlrd>=2.0.0",
    "markitdown>=0.0.1",
    "weasyprint>=60.0",
    "ezdxf>=1.0.0",
]

# ── Web & HTML Parsing ──
web = ["beautifulsoup4>=4.12.0", "playwright>=1.40.0", "edge-tts>=6.0.0", "scrapling>=0.0.1"]

# ── GIS & Spatial ──
gis = ["shapely>=2.0.0", "fiona>=1.9.0", "networkx>=3.0"]

# ── Visualization ──
viz = ["matplotlib>=3.7.0", "graphviz>=0.20.0"]

# ── AI / ML / LLM ──
ai = [
    "cognee>=1.0.0",
    "langextract>=1.3.0",
    "openai>=1.0.0",
    "google-genai>=0.3.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
]

# ── OCR ──
ocr = ["pytesseract>=0.3.10", "paddleocr>=2.7.0", "easyocr>=1.7.0"]

# ── Vector DB ──
vectordb = [
    "faiss-cpu>=1.7.0",
    "qdrant-client>=1.8.0",
    "pymilvus>=2.3.0",
    "lancedb>=0.6.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
]

# ── LSP / Code Analysis ──
lsp = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
]

# ── GPU Monitoring ──
gpu = ["pynvml>=11.0.0"]

# ── Networking / P2P ──
networking = ["aioquic>=0.9.0", "grpcio>=1.59.0", "protobuf>=4.0.0"]

# ── Testing ──
test = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "lxml>=4.9", "debugpy>=1.8.0"]

# ── Security / CI Tools ──
security = ["bandit>=1.7.0", "pip-audit>=2.7.0", "py-spy>=0.3.0"]

# ── Development ──
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "livingtree-ai-agent[test,security]",
]

# ── All (full installation) ──
all = [
    "livingtree-ai-agent[desktop,docs,web,gis,viz,ai,ocr,vectordb,lsp,gpu,networking,security]",
]

[tool.setuptools.packages.find]
include = ["livingtree*", "client*", "server*", "app*"]

[project.scripts]
livingtree = "livingtree.main:main"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git", ".venv", "__pycache__", "*.pyc",
    "client/src/*", "node_modules/*",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pyflakes + pycodestyle
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "B",                 # flake8-bugbear
    "SIM",               # flake8-simplify
    "C4",                # flake8-comprehensions
]
ignore = [
    "E501",              # line-too-long (handled by formatter)
    "B008",              # do-not-perform-function-calls-in-argument-defaults
]

[tool.ruff.lint.isort]
known-first-party = ["livingtree"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
